# real-time-competitive-matchmaker

./: Cargo.toml  README.md  architecture.md  matchmaker.toml
src/: lib.rs  main.rs  models.rs
src/api/: ws.rs
src/engine/: arena.rs  balancer.rs  config.rs  mod.rs  primitives.rs  state.rs  worker.rs
