[package]
name = "real-time-competitive-matchmaker"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Telemetry (Do not use println!)
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10.1"
rand_distr = "0.6.0"
