[package]
name = "real-time-competitive-matchmaker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "real-time-competitive-matchmaker"
path = "src/main.rs"

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"

[[bin]]
name = "distribution_test"
path = "src/bin/distribution_test.rs"

[[bin]]
name = "network_benchmark"
path = "src/bin/network_benchmark.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
rand_distr = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.21"